# rocket_league

./: .buildinfo  .gitignore  .gitmodules  CNAME  Dockerfile  LICENSE  README.md  genindex.html  hosts.yaml  index.html  objects.inv  package.xml  packages.html  py-modindex.html  rktl_autonomy.html  rktl_control.html  rktl_game.html  rktl_launch.html  rktl_msgs.html  rktl_perception.html  rktl_planner.html  rktl_sim.html  search.html  searchindex.js  start.py
hardware_controller/: CMakeLists.txt  package.xml
hardware_controller/launch/: hardware_controller.launch  pose_estimator.launch  velocity_controller.launch
hardware_controller/nodes/: pose_estimator  velocity_controller
hardware_controller/params/: pose_estimator.yaml
local_planner/: CMakeLists.txt  package.xml  setup.py
local_planner/YAML_files/: trajectory_params.yaml  waypoint_params.yaml
local_planner/launch/: local_planner.launch  waypoint_controller_node.launch
local_planner/nodes/: simple_drive_node  simple_path_tester_node  trajectory_planner_node  waypoint_controller_node
racersim/: .gitignore  CMakeLists.txt  README.md  installBox2D.sh  package.xml  rviz_config.rviz  setup.py
racersim/YAML_files/: sim_info.yaml
racersim/launch/: racersim.launch  score_ball.launch  sim_node.launch  simple_path_follower.launch
racersim/nodes/: racersim_node  sim_node
rktl_autonomy/: CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml  setup.py
rktl_autonomy/YAMLEditor/: .gitignore  .project  README.html  README.md
rktl_autonomy/config/: logs.yaml  rocket_league.yaml  snake.yaml
rktl_autonomy/html/: Main_8java.html  Main_8java_source.html  ____init_____8py.html  ____init_____8py_source.html  __ros__interface_8py.html  __ros__interface_8py_source.html  annotated.html  cartpole__direct__interface_8py.html  cartpole__direct__interface_8py_source.html  cartpole__interface_8py.html  cartpole__interface_8py_source.html  classcom_1_1purduearc_1_1yamleditor_1_1Main-members.html  classcom_1_1purduearc_1_1yamleditor_1_1Main.html  classes.html  classrktl__autonomy_1_1__ros__interface_1_1ROSInterface-members.html  classrktl__autonomy_1_1__ros__interface_1_1ROSInterface.html  classrktl__autonomy_1_1__ros__interface_1_1ROSInterface__inherit__graph.map  classrktl__autonomy_1_1__ros__interface_1_1ROSInterface__inherit__graph.md5  classrktl__autonomy_1_1__ros__interface_1_1SimTimeException.html  classrktl__autonomy_1_1__ros__interface_1_1SimTimeException__inherit__graph.map  classrktl__autonomy_1_1__ros__interface_1_1SimTimeException__inherit__graph.md5  classrktl__autonomy_1_1cartpole__direct__interface_1_1CartpoleDirectInterface-members.html  classrktl__autonomy_1_1cartpole__direct__interface_1_1CartpoleDirectInterface.html  classrktl__autonomy_1_1cartpole__direct__interface_1_1CartpoleDirectInterface__inherit__graph.map  classrktl__autonomy_1_1cartpole__direct__interface_1_1CartpoleDirectInterface__inherit__graph.md5  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleActions-members.html  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleActions.html  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleActions__inherit__graph.map  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleActions__inherit__graph.md5  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleInterface-members.html  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleInterface.html  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleInterface__inherit__graph.map  classrktl__autonomy_1_1cartpole__interface_1_1CartpoleInterface__inherit__graph.md5  classrktl__autonomy_1_1env__counter_1_1EnvCounter-members.html  classrktl__autonomy_1_1env__counter_1_1EnvCounter.html  classrktl__autonomy_1_1rocket__league__interface_1_1CarActions-members.html  classrktl__autonomy_1_1rocket__league__interface_1_1CarActions.html  classrktl__autonomy_1_1rocket__league__interface_1_1CarActions__inherit__graph.map  classrktl__autonomy_1_1rocket__league__interface_1_1CarActions__inherit__graph.md5  classrktl__autonomy_1_1rocket__league__interface_1_1RocketLeagueInterface-members.html  (+79 more)
rktl_autonomy/launch/: README.html  README.md  cartpole.launch  rocket_league.launch  rocket_league_train.launch  snake.launch
rktl_autonomy/nodes/: README.html  README.md  cart_pole_node  cartpole_env  logger  plotter  rocket_league_agent  rocket_league_agent.py  rocket_league_double_agent  snake_agent
rktl_autonomy/rktl_autonomy/: _ros_interface.py  snake_interface.py
rktl_autonomy/scripts/: README.html  README.md  eval_rocket_league.py  modular_train.py  train_batch.sh  train_cart.py  train_cartpole.py  train_rocket_league.py  train_snake.py  tune_rocket_league.py  tune_rocket_league_2.py
rktl_autonomy/test/: test_rktl_rewards.launch  test_rktl_rewards_echo.py  test_rktl_rewards_owner.py  test_step.test  test_step_echo.py  test_step_node  test_step_owner.py
rktl_control/: CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml  setup.py
rktl_control/config/: controller.yaml  hardware_interface.yaml  mean_odom_filter.yaml  particle_odom_filter.yaml  (+2 more)
rktl_dependencies/: package.xml  setup.py
rktl_game/: CMakeLists.txt  README.html  README.md  index.html  index.js  manifest.yaml  package.xml  stylesheet.css
rktl_launch/: CMakeLists.txt  README.html  manifest.yaml  package.xml  setup.cfg  setup.py
rktl_msgs/: CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml
rktl_percept2_new/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rktl_perception/: BallTracking.md  CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml  setup.cfg  setup.py
rktl_planner/: CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml  setup.py
rktl_sim/: CMakeLists.txt  README.html  README.md  manifest.yaml  package.xml  setup.py
rktl_test/: CMakeLists.txt  package.xml
rl_path_planner/: CMakeLists.txt  package.xml  setup.py
rocket_league_control/: CMakeLists.txt  package.xml
rocket_league_drl/: CMakeLists.txt  package.xml  setup.py
rocket_league_estimation/: BallTracking.md  CMakeLists.txt  package.xml
(+2873 files in other folders)
