<?xml version="1.0"?>
<package format="2">
  <name>racersim</name>
  <version>1.0.0</version>
  <description>Simulated environment for ARC's rocket league competition</description>

  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">https://www.purduearc.com</url>
  <author email="mccarth@purdue.edu">Harrison McCarty</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-pygame</exec_depend>
  <exec_depend>libbox2d-dev</exec_depend>
</package>
