<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rktl_autonomy</name>
  <version>1.0.0</version>
  <description>Deep reinforcement learning for ARC Rocket League project</description>
  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">http://www.purduearc.com</url>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>snakesim</exec_depend>
  <exec_depend>rktl_msgs</exec_depend>
  <exec_depend>rktl_launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
