<?xml version="1.0"?>
<package format="2">
  <name>rktl_control</name>
  <version>0.0.0</version>
  <description>Closed loop velocity controller for the ARC Rocket League project.</description>
  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">http://www.purduearc.com</url>
  <author email="baxter26@purdue.edu">James Baxter</author>
  <author email="lee3228@purdue.edu">Justin Lee</author>
  <author email="lied@purdue.edu">Darren Lie</author>
  <author email="rketler@purdue.edu">Robert Ketler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
</package>