<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rktl_dependencies</name>
    <version>1.0.0</version>
    <description>Contains external dependencies required for other packages.</description>
    <url type="website">https://www.purduearc.com</url>
    <author email="mccarth@purdue.edu">Harrison McCarty</author>
    <author email="mcnama20@purdue.edu">Arianna McNamara</author>
    <author email="vvvu@purdue.edu">Vincent Vu</author>
    <author email="ateigen@purdue.edu">Adrian Teigen</author>
    <author email="dgerblic@purdue.edu">Daniel Gerblick</author>
    <license>BSD 3 Clause</license>

    <depend>rclpy</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <exec_depend>python-numpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
