<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rktl_dependencies</name>
    <version>1.0.0</version>
    <description>Contains external dependencies required for other packages.</description>
    <url type="website">https://www.purduearc.com</url>
    <maintainer email="aschmok@purdue.edu">Adam Schmok</maintainer>
    <license>BSD 3 Clause</license>

    <depend>rclpy</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <exec_depend>python-numpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
