<?xml version="1.0"?>
<package format="2">
  <name>rktl_game</name>
  <version>0.0.0</version>
  <description>Game manager for ARC Rocket League project</description>
  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">http://www.purduearc.com</url>
  <author email="aernande@purdue.edu">AJ Ernandes</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rktl_msgs</exec_depend>
</package>
