<?xml version="1.0"?>
<package format="2">
  <name>rktl_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for ARC Rocket League Project</description>
  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">https://www.purduearc.com</url>
  <author email="mcnama20@purdue.edu">Arianna McNamara</author>
  <author email="baxter26@purdue.edu">James Baxter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
