<?xml version="1.0"?>
<package format="2">
  <name>rktl_perception</name>
  <version>0.0.0</version>
  <description>Perception for ARC Rocket League project</description>
  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">http://www.purduearc.com</url>
  <author email="baxter26@purdue.edu">James Baxter</author>
  <author email="dgerblic@purdue.edu">Daniel Gerblick</author>
  <author email="aernande@purdue.edu">AJ Ernandes</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pointgrey_camera_driver</depend>
  <depend>image_proc</depend>
  <depend>apriltag_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
</package>
