<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rktl_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="DinoSage@todo.todo">DinoSage</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
<!-- added dependencies from previous-->
  <depend>pointgrey_camera_driver</depend>
  <depend>image_proc</depend>
  <depend>apriltag_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
<!-- added dependencies missing from previous--> 
  <depend>OpenCV</depend>
  <depend>Eigen3</depened>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depened>


  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- from "migrating interface package"-->
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
