<?xml version="1.0"?>
<package format="2">
    <name>rktl_planner</name>
    <version>1.0.0</version>
    <description>Handles localized actions to plan and follow trajectories.</description>

    <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
    <license>BSD 3 Clause</license>
    <url type="website">https://www.purduearc.com</url>
    <author email="mccarth@purdue.edu">Harrison McCarty</author>
    <author email="mcnama20@purdue.edu">Arianna McNamara</author>
    <author email="vvvu@purdue.edu">Vincent Vu</author>
    <author email="ateigen@purdue.edu">Adrian Teigen</author>
    <author email="dgerblic@purdue.edu">Daniel Gerblick</author>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>python-numpy</exec_depend>
    <exec_depend>rktl_msgs</exec_depend>
    <build_depend>rktl_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>